update on 07.06.2023